fdo#73363: sd: fix mis-detection of Visio files as PPT

SdFilterDetect::detect() erroneously detects all binary MSO files, and
because the Visio types would be checked after PPT, Visio is pre-empted.

Change-Id: I6ec3647a508dc8d79b47bfff6de35ccae39416ee
(cherry picked from commit e62339f856efa0b8ef03df3bf8b93e098c4ac0d3)
Reviewed-on: https://gerrit.libreoffice.org/7976
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>