sd/source/ui/unoidl/sddetect.cxx
@@ -371,6 +371,10 @@ OUString SAL_CALL SdFilterDetect::detect( Sequence< beans::PropertyValue >& lDes
                                 else
                                     pFilter = SfxFilter::GetFilterByName( pFilterPowerPoint97);
                             }
+                            else
+                            {
+                                pFilter = 0;
+                            }
                         }
                         else
                         {
@@ -422,6 +426,10 @@ OUString SAL_CALL SdFilterDetect::detect( Sequence< beans::PropertyValue >& lDes
                         }
                     }
                 }
+            }
+            else
+            {
+                pFilter = 0;
             }
         }
     }
